Change download file name

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             :href='patchData'
             class='download-link'
             type="application/octet-stream"
-            download="everdrive_gb_v1.04_theme_patch.ips"
+            download="everdrive_gb_v04_theme_patch.ips"
             :class="{ disabled: !downloadEnabled }"
           >
             >>> Download IPS Patch <<<
