Add orangeglo link to footer, add gba link to heading

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <div class='heading'>
       <h1><span class='outline'>EverDrive GB</span> Theme Editor</h1>
       <p>Create a custom color theme for your EverDrive GB X3, X5, and X7 flashcarts!</p>
+      <p>Looking for the GBA theme editor? <a href="https://orangeglo.github.io/everdrive-gba-editor/">Click here to switch</a>
     </div>
 
     <div id="app">
@@ -78,9 +79,13 @@
     </div>
 
     <footer>
-      <a href="https://github.com/orangeglo/everdrive-gb-editor">view this project on github</a>
-      -
-      by orangeglo (orangeglo#6197 on Discord)
+      <div>
+        <a href="https://github.com/orangeglo/everdrive-gb-editor">view this project on github</a>
+        -
+        by orangeglo (orangeglo#6197 on Discord)
+        -
+        <a href="https://orangeglo.github.io/">more tools @ orangeglo.github.io</a>
+      </div>
     </footer>
 
     <script src="script/app.js"></script>
