--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta property="og:url" content="https://orangeglo.github.io/everdrive-gb-editor/" />
     <meta property="og:site_name" content="EverDrive GB Theme Editor" />
     <meta property="og:type" content="website" />
+    <meta name="theme-color" content="#FF8800" />
 
     <script src="script/vue.min.js"></script>
     <script id="devload" src="script/devload.js"></script>
