--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- <link rel="shortcut icon" type="image/png" href="img/favicon.png"/> -->
     <meta name="description" content="EverDrive GB Theme Editor is a tool to create custom themes for Krikzz's Game Boy flashcarts.">
     <meta property="og:description" content="EverDrive GB Theme Editor is a tool to create and share custom themes for Krikzz's Game Boy flashcarts." />
-    <!-- <meta property="og:image" content="https://orangeglo.github.io/gbnp/img/gbnp.png" /> -->
+    <meta property="og:image" content="https://orangeglo.github.io/everdrive-gb-editor/img/ogimage.png" />
     <meta property="og:url" content="https://orangeglo.github.io/everdrive-gb-editor/" />
     <meta property="og:site_name" content="EverDrive GB Theme Editor" />
     <meta property="og:type" content="website" />
