--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
           <p class='short-text'>
             Share your theme by sharing the current URL! Your theme is encoded into the query parameters.
           </p>
+          <p class='short-text'>
+            Please be aware that this tool is not officially supported, so use at your own risk!
+          </p>
         </div>
         <div class='live-preview'>
           <live-preview :palettes="palettes" :fonts-loaded='fontsLoaded'></live-preview>
