Add ukraine message

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <div class='heading'>
       <h1><span class='outline'>EverDrive GB</span> Theme Editor</h1>
       <p>Create a custom color theme for your EverDrive GB flashcarts!</p>
-      <p>Looking for the GBA theme editor? <a href="https://orangeglo.github.io/everdrive-gba-editor/">Click here to switch</a>
+      <p>Looking for the GBA theme editor? <a href="https://orangeglo.github.io/everdrive-gba-editor/">Click here to switch</a></p>
+      <p>🇺🇦 Peace for Ukraine 🇺🇦 Fuck Putin 🇺🇦</p>
     </div>
 
     <div id="app">
