Add support for v1.06 firmware

--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
     </noscript>
 
     <div class='heading'>
-      <h1><span class='outline'>EverDrive GB</span> Theme Editor</h1>
+      <h1><span class='outline'>EverDrive GB</span> Theme Editor 🇺🇦</h1>
       <p>Create a custom color theme for your EverDrive GB flashcarts!</p>
       <p>Looking for the GBA theme editor? <a href="https://orangeglo.github.io/everdrive-gba-editor/">Click here to switch</a></p>
-      <p>🇺🇦 Peace for Ukraine 🇺🇦 Fuck Putin 🇺🇦</p>
     </div>
 
     <div id="app">
@@ -78,8 +77,8 @@
             <span v-if="model == 'xseries'" class='bold'>GBCSYS/GBCOS.BIN</span>
             <span v-if="model == 'edgb'" class='bold'>GBOS.GB</span>
             file on your EverDrive. This patch will only work with firmware version
-            <span v-if="model == 'xseries'" class='bold'>v1.05!</span>
-            <span v-if="model == 'edgb'" class='bold'>v4!</span>
+            <span v-if="model == 'xseries'" class='bold'>v1.06 (2022-11-28)!</span>
+            <span v-if="model == 'edgb'" class='bold'>v4 (2017-06-07)!</span>
           </p>
           <p class='short-text'>
             You can download the latest firmware from
