Fix discord name

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
     <footer>
       <a href="https://github.com/orangeglo/everdrive-gb-editor">view this project on github</a>
       -
-      by orangeglo (orangeglo#6197 on Discord)
+      by orangeglo (orangeglo6197 on Discord)
       -
       <a href="https://orangeglo.github.io/">more tools @ orangeglo.github.io</a>
     </footer>
